Fixes #26 force vertical scrollbar so nav buttons don't move

--- a/dragonfly/static/css/dragonfly.css
+++ b/dragonfly/static/css/dragonfly.css
@@ -1,3 +1,6 @@
+body {
+    overflow-y: scroll;
+}
 .df-header-metadata > span {
     margin-left: 5px;
     margin-right: 5px;
